--- a/app/src/main/res/layout/fragment_why_prescription_2.xml
+++ b/app/src/main/res/layout/fragment_why_prescription_2.xml
@@ -110,8 +110,8 @@ other factors" />
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20sp"
-        android:backgroundTint="@color/teal_500"
-        android:text="Okay"
+        android:backgroundTint="@color/teal_200"
+        android:text="Okay, i understand"
         android:textColor="@android:color/white"
         app:cornerRadius="20dp" />
 
